# vdbscan

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  Taskfile.yaml  deny.toml  mise.toml
benchmarks/kitti/: Cargo.toml  README.md
benchmarks/kitti/benches/: kitti.rs
benchmarks/kitti/src/: lib.rs
docs/dev/: morton.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_dbscan_invariants.rs  fuzz_dbscan_no_panic.rs  fuzz_label_noise_consistency.rs  fuzz_voxel_no_panic.rs
src/: dbscan.rs  lib.rs  morton.rs  types.rs
synthetic-data/: README.md  main.py  pyproject.toml
test/unit/: dbscan.rs  morton.rs  types.rs
vdbscan-cli/: Cargo.toml  README.md
vdbscan-cli/src/: color.rs  input.rs  main.rs  output.rs
