[workspace]
members = ["benchmarks/kitti"]
default-members = ["."]
resolver = "3"

[package]
name = "vdbscan"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
# Neighbor search radius (voxels in each direction).
# With voxel_size = eps, radius 2 is the minimum correct value:
# a point at the far edge of its voxel can have a neighbor at edge of voxel+2.
# Cube sizes: radius-1 → 27 cells, radius-2 → 125 cells, radius-3 → 343 cells.
# Only one of these may be enabled at a time.
neighbor-radius-1 = []  # 3×3×3 — only correct when voxel_size ≤ eps/2
neighbor-radius-3 = []  # 7×7×7 — conservative, for very coarse voxels

[dependencies]
smallvec = "1"

[profile.release]
debug = true

[profile.bench]
debug = true

[[test]]
name = "unit_types"
path = "test/unit/types.rs"

[[test]]
name = "unit_dbscan"
path = "test/unit/dbscan.rs"

[[test]]
name = "unit_morton"
path = "test/unit/morton.rs"
