[workspace]
members = ["benchmarks/kitti", "vdbscan-cli"]
default-members = ["."]
resolver = "3"

[package]
name = "vdbscan"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
smallvec = "1"

[profile.release]
debug = true

[profile.bench]
debug = true

[[test]]
name = "unit_types"
path = "test/unit/types.rs"

[[test]]
name = "unit_dbscan"
path = "test/unit/dbscan.rs"

[[test]]
name = "unit_morton"
path = "test/unit/morton.rs"
